2008-10-09 Daniel Nauck <dna@mono-project.de>

        * Makefile.am: fix makefile

2008-10-09 Daniel Nauck <dna@mono-project.de>

	* gsharp.in: add start script

2008-10-09 Daniel Nauck <dna@mono-project.de>

        * Makefile.am: fix makefile

2008-09-28  Miguel de Icaza <miguel@novell.com> 

	* History.cs: Remove history, will implement a different system than
	  the bash-like system.  This model does not match.
	* Main.cs: Use a cool trick from Alan McGovern to guess whether the
	  host application had Gtk running or not.

2008-09-28  Miguel de Icaza <miguel@novell.com> 

	* MainWindow.cs: New dialog box, based on Paolo's dialog box.
	* gtk-gui/Mono.CSharp.Gui.MainWindow.cs: Add support for injecting
	  ourselves into a process.
	* Main.cs: Add support for injecting the code into the target process.

2008-09-28  Miguel de Icaza <miguel@novell.com> 

	

2008-09-28  Miguel de Icaza <miguel@novell.com> 

	Added new files for a GUI Gtk# csharp command line interpreter,
	based on Aaron's BooShell for Banshee and the `csharp' command
	line tool.

	The idea is to turn this into a module that can be attached into
	Gtk# applications.